# civitai-dl

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  README_CN.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
civitai_dl/: __init__.py  __main__.py
civitai_dl/api/: __init__.py  client.py
civitai_dl/cli/: main.py
civitai_dl/config/: proxy_settings.py
civitai_dl/core/: api.py  config.py  constants.py  downloader.py  file_utils.py  filter.py
civitai_dl/utils/: config.py  download.py  env.py  formatter.py  logger.py  metadata.py  path_template.py
civitai_dl/webui/: __init__.py  app.py  callbacks.py
civitai_downloader/: __init__.py
civitai_downloader/api/: client.py
civitai_downloader/cli/: __init__.py  main.py
civitai_downloader/config/: proxy_settings.py
civitai_downloader/core/: __init__.py
civitai_downloader/webui/: app.py
docs/develop/: api-reference.md  architecture.md  coding_standards.md  coding_standards_cheatsheet.md  index.md  modules.md  specification.md
docs/diary/: README.md  week1.md  week2.md  week3.md  week4.md
docs/guide/: cli-usage.md  config-commands.md  download-commands.md  image-commands.md  index.md  queue-commands.md
docs/product/: civitai-api.md  functionalities.md  image-download.md  implementation-reference.md  index.md  model-browsing.md  model-download.md  modules.md  progress.md  (+2 more)
tests/: __init__.py  conftest.py  mocks.py  set_proxy.py  test_api.py  test_api_connection.py  test_download.py  test_downloader.py
tools/: set_proxy.py
(+16 files in other folders)
