[tool.poetry]
name = "civitai-dl"
version = "0.1.0"
description = "A tool for browsing and downloading resources from Civitai"
authors = ["Civitai Downloader Team"]
readme = "README.md"
repository = "https://github.com/neverbiasu/civitai-dl"
documentation = "https://github.com/neverbiasu/civitai-dl"
keywords = ["civitai", "ai", "download", "stable-diffusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.28.0"
click = "^8.0.0"
gradio = "^3.20.0"
tqdm = "^4.64.0"
pillow = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^7.1.2"
mypy = "^1.0.0"

[tool.poetry.scripts]
civitai-dl = "civitai_downloader.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
